--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_height="63dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="496dp"
-        android:text="..."
+        android:text="@string/Text_waiting_for_dat"
         android:textAlignment="center"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
