--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,13 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".MapsActivity">
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/amont_Box"
+        android:layout_width="190dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="352dp"
+        android:hint="@string/hint"
+        android:textColorHighlight="#3F51B5"
+        android:textColorLink="#3F51B5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/label_amont2"
+        android:layout_width="173dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="360dp"
+        android:text="@string/Label_money"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/resultLocate_Box"
         android:layout_width="317dp"
         android:layout_height="63dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="480dp"
-        android:text="..."
+        android:text="@string/Text_waiting_for_dat"
         android:textAlignment="center"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,21 +44,13 @@
 
     <TextView
         android:id="@+id/currentLocation"
-        android:layout_width="187dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="292dp"
+        android:layout_width="184dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="20dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/LocationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="372dp"
-        android:layout_marginEnd="120dp"
-        android:text="@string/Button_locate"
+        android:text="@string/Text_waiting_for_dat"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,11 +58,31 @@
         android:id="@+id/label_currentLoc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="308dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="300dp"
         android:text="@string/Current_location"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/mapsConvertButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="416dp"
+        android:layout_marginEnd="76dp"
+        android:text="@string/Button_convert"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/locationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="416dp"
+        android:layout_marginEnd="252dp"
+        android:text="@string/Button_locate"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -62,13 +98,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/input_Box"
+        android:id="@+id/address_Box"
         android:layout_width="190dp"
         android:layout_height="47dp"
         android:layout_marginStart="204dp"
         android:layout_marginTop="228dp"
         android:hint="@string/hint"
-        android:inputType="numberDecimal"
         android:textColorHighlight="#3F51B5"
         android:textColorLink="#3F51B5"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,8 +113,10 @@
         android:id="@+id/imageView3"
         android:layout_width="178dp"
         android:layout_height="126dp"
-        app:srcCompat="@android:drawable/ic_dialog_map"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="47dp" />
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="47dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_dialog_map" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
