--- a/app/src/main/res/layout/activity_modify.xml
+++ b/app/src/main/res/layout/activity_modify.xml
@@ -6,12 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".ModifyActivity">
 
+    <Button
+        android:id="@+id/rate_modify_button"
+        android:layout_width="92dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="408dp"
+        android:text="@string/Button_change_rate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/input_rate"
+        android:layout_width="152dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="324dp"
+        android:hint="@string/hint"
+        android:inputType="numberDecimal"
+        android:textColorHighlight="#3F51B5"
+        android:textColorLink="#3F51B5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Spinner
         android:id="@+id/currency_spinner"
         android:layout_width="171dp"
         android:layout_height="41dp"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginTop="324dp"
+        android:layout_marginEnd="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,8 +42,8 @@
         android:id="@+id/label_change_monnaie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="244dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginTop="288dp"
+        android:layout_marginEnd="48dp"
         android:text="@string/change_monnaie"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,43 +54,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="288dp"
         android:text="@string/Label_rate"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/rate_modify_button"
-        android:layout_width="92dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="372dp"
-        android:text="@string/Button_change_rate"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/input_rate"
-        android:layout_width="152dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="280dp"
-        android:hint="@string/hint"
-        android:inputType="numberDecimal"
-        android:textColorHighlight="#3F51B5"
-        android:textColorLink="#3F51B5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="161dp"
-        android:layout_height="170dp"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="35dp"
+        android:layout_width="202dp"
+        android:layout_height="229dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+        app:srcCompat="@drawable/modify" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
